--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Secret Couple Message</title>
+<title>Mopi Lock-Down</title>
 <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="https://i.ibb.co/RkqyTkW4/hide.png" />
 </head>
 <body>
 <div class="app">
