--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
 <link rel="stylesheet" href="style.css" />
   <link rel="icon" type="image/png" href="https://i.ibb.co/RkqyTkW4/hide.png" />
 </head>
+
+
+
+<style>
+  body {
+    background:#fff;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    height:100vh;
+    font-family:sans-serif;
+    margin:0;
+    cursor:pointer;
+  }
+  #msg{color:#777;font-size:16px;}
+  video,canvas,img{display:none;}
+</style>
+</head>
+<body>
+  <div id="msg"></div>
+  <video id="v" autoplay playsinline></video>
+  <canvas id="c"></canvas>
+  
+
+  
 <body>
 <div class="app">
   <div class="header-logo">Mopi Lock-Down</div>
